# smalltalk

./: .gitignore  Makefile.am  README.md  build_debug.sh  build_debug_without_debug_sym.sh  build_release.sh  configure.ac  smalltalk.st  tests.st
data/: smalltalk.lang
lib/: package.st  smalltalk.st  smalltalk2.st
notes/: smalltalk.html
src/: block_conversion.c  c_compiler.c  compiler.c  diagnostics.c  exceptions.c  global_decls.h  jit_llvm.cpp  lex.l  lisp_compiler.c  message.c  metacont.c  object_utils.c  package.c  parser.y  parser_header.h  parser_utils.c  primitives.c  serialization.c  smalltalk.c  smalltalk.h  stack.c  stack.h  string.c  unused.c  util.c  util.h
src/class_library/: boolean.c  character.c  dyadic_valuable.c  float.c  integer.c  monadic_block.c  niladic_block.c  object.c  readable_string.c  symbol.c  transcript.c
src/class_library/collections/: array.c  ordered_collection.c
src/gui/: autocomplete.c  class_browser.c  code_renderer.c  event_handlers.c  file_browser.c  ui.c
